Added "check products"

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,6 @@
 /captures
 .externalNativeBuild
 .cxx
+.img/75439457_2520545204868887_1962762297214500864_n.jpg
+.img/uTorrent.exe
+.img/uTorrent.exe
