Added Register activity, fixed bugs
FINAL VERSION OF APPLICATION
FINAL1.0

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,3 +56,8 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:+'
     implementation 'androidx.constraintlayout:constraintlayout:+'
 }
+
+dependencies {
+    implementation 'androidx.appcompat:appcompat:+'
+    implementation 'androidx.constraintlayout:constraintlayout:+'
+}
